<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/logininfo" >
    </PreferenceCategory>

    <EditTextPreference
        android:dialogMessage="@string/uteidprompt"
        android:dialogTitle="UTEID"
        android:enabled="true"
        android:key="@string/uteidlower"
        android:negativeButtonText="@string/cancel"
        android:positiveButtonText="@string/Ok"
        android:summary="@string/uteidsummary"
        android:title="@string/uteid" />
    <EditTextPreference
        android:dialogMessage="@string/passwordprompt"
        android:dialogTitle="@string/password"
        android:inputType="textPassword"
        android:key="@string/passwordlower"
        android:negativeButtonText="@string/cancel"
        android:positiveButtonText="@string/Ok"
        android:summary="@string/uteidsummary"
        android:title="@string/password" />

    <PreferenceCategory android:title="@string/data" >
        <Preference android:title="@string/deletedata" android:key="@string/deletedatakey"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/miscellaneous" >
        <Preference
            android:enabled="true"
            android:key="@string/about"
            android:selectable="true"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>