<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/searchstringInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SearchString"
        android:inputType="textWebEditText" >
    </EditText>

    <Spinner
        android:id="@+id/locationInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchstringInput"
        android:entries="@array/LocationTable"
        android:prompt="@string/LocationPrompt" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/locationInput"
        android:onClick="onGoButtonClicked"
        android:text="@string/go" />

</RelativeLayout>